--- a/myapp/templates/feedback.html
+++ b/myapp/templates/feedback.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'CSS/main.css' %}">
     <link rel="stylesheet" href="{% static 'CSS/feedback.css' %}">
     <script src="https://kit.fontawesome.com/a14ac632d0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
      <header>
