--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -8,6 +8,7 @@
     {% load static %}
     <link rel="stylesheet"  href="{% static 'CSS/main.css' %}">
     <link rel="stylesheet"  href="{% static 'CSS/home.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
