--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,24 +11,33 @@
     <script src="https://kit.fontawesome.com/a14ac632d0.js" crossorigin="anonymous"></script>
     <title>Login</title>
 </head>
+
 <body>
     {% block content %}
     <div class="container" id="container">
         <div class="left">
-                    <h1>Welcome Back!</h1>
-                    <p>Don't have an account? Sign-up now</p>
-                    <button class="ghost" id="createAccount">Create Account</button>
+            <h1>Welcome Back!</h1>
+            <p>Don't have an account? Sign-up now</p>
+            <button class="ghost" id="createAccount">Create Account</button>
         </div>
         <div class="sign-in">
-            <form>
-                 <h1>Login</h1> 
-                 <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
+            <form method="POST">
+                {% csrf_token %}
+                <h1>Login</h1>
+
+                {% if error %}
+                <p style="color:red;">{{ error }}</p>
+                {% endif %}
+
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
+
         </div>
     </div>
     {% endblock %}
     <script src="{% static 'JS/login.js' %}"></script>
 </body>
+
 </html>
